--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
         // Also declare the dependency for the Google Play services library and specify its version
         implementation 'com.google.android.gms:play-services-auth:20.1.0'
     }
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
