--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,11 @@ dependencies {
     }
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //sdp and ssp
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
 }
