--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
 
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    //Horizontal CalendarView in Android
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 }
