--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.medicalappreminder_java">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,17 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MedicalAppReminderJava">
         <activity
+            android:name=".AddMedicine.View.AddMedicine"
+            android:label="@string/add_med"
+            android:parentActivityName=".HomeScreen.View.HomeScreen"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            />
+        <activity
             android:name=".HomeScreen.View.HomeScreen"
-            android:exported="false" />
+            android:exported="false" android:theme="@style/MyMaterialTheme"  android:screenOrientation="portrait"/>
         <activity
             android:name=".SignUp.View.SignUpActivity"
-            android:exported="true" />
+            android:exported="true" android:theme="@style/MyMaterialTheme"  android:screenOrientation="portrait"/>
         <activity
             android:name=".Login"
-            android:exported="true" />
+            android:exported="true" android:theme="@style/MyMaterialTheme"  android:screenOrientation="portrait"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" android:theme="@style/MyMaterialTheme"  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
