--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'  // Google Services plugin
+    id 'com.google.gms.google-services'// Google Services plugin
+    id 'androidx.navigation.safeargs'
 
 }
 
@@ -40,6 +41,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
     implementation 'androidx.navigation:navigation-ui:2.4.2'
 
@@ -105,4 +107,6 @@ dependencies {
 
     //Horizontal CalendarView in Android
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+
+
 }
