--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,7 @@ dependencies {
 
 
     //Horizontal CalendarView in Android
-    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+   // implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 
 
 }
