--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:theme="@style/Theme.MedicalAppReminderJava" >
         <activity
             android:name=".MedicationModification.View.MedicationModification"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Edit medicine"
+            android:parentActivityName=".HomeScreen.View.HomeScreen"/>
         <activity
             android:name=".AddMedicine.View.AddMedicine"
             android:label="@string/add_med"
