--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,7 @@ dependencies {
     //Sectioned-RecyclerView
     implementation 'com.afollestad:sectioned-recyclerview:0.2.3'
     //Horizontal CalendarView in Android
-    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+   // implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 
 
 
