--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:exported="true"
 
 
-        android:allowBackup="true"
+        android:allowBackup="false"
 
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
